@@ -1,3 +1,11 @@
+2001-12-22 Alexander Rawass <alexannika@users.sourceforge.net>
+	
+	* modified Cockpit:
+	  - Elite-Style radar
+	  - config var graphics/hud/radarType, can be WC or Elite
+	  - several 'lines' that get drawn, several config vars
+	
+
 2001-12-21 Alexander Rawass <alexannika@users.sourceforge.net>
 	
 	* modified Cockpit:
